# CG2324

./: .gitignore  CMakeLists.txt  README.md
demos/phase1/test_1_3/: sphere_1_10_10.3d
demos/phase1/test_1_6/: test_1_6.xml
demos/phase2/solar_system/: sphere_1_32_32.3d
demos/phase2/test_2_2/: sphere_1_8_8.3d
demos/phase3/solar_system/: solar_system.xml
demos/phase3/test_3_1/: test_3_1.xml
demos/phase4/solar_system/: bezier_10.3d  solar_system.xml
demos/phase4/test_4_4/: box_2_3.3d  plane_2_3.3d  sphere_1_8_8.3d
demos/phase4/test_4_6/: bezier_10.3d  cone_1_2_4_3.3d
demos/phase_1/test_1_2/: cone_1_2_4_3.3d
demos/phase_1/test_1_4/: box_2_3.3d
demos/phase_1/test_1_5/: plane_2_3.3d
demos/phase_1/test_1_6/: box_2_2.3d  sphere_1_64_64.3d
demos/phase_2/solar_system/: solar_system.xml
include/engine/: camera.h  engine_model.h  group.h  light.h  model.h  transform.h  vertex_buffers.h  window.h  world.h  world_loader.h  xml_world_loader.h
include/engine/scene/: camera.h  group.h  light.h  transform.h  world.h
include/engine/scene/model/: model.h  texture.h  vertex_buffers.h
include/engine/scene/model/color/: color.h  color_rgb.h
include/generator/: box.h  cone.h  model.h  patch_model.h  plane.h  sphere.h
include/generator/models/: box.h  cone.h  model.h  patch_model.h  plane.h  sphere.h
include/utils/: box.h  cone.h  model.h  plane.h  point3.h  sphere.h  vector2.h  vector3.h  vertex.h
reports/phase1/: main.typ
reports/phase2/: main.typ
reports/phase3/: main.typ  template.typ
reports/phase4/: main.typ
src/engine/: CMakeLists.txt  camera.cpp  color.cpp  color_rgb.cpp  engine_model.cpp  group.cpp  main.cpp  model.cpp  texture.cpp  transform.cpp  vertex_buffers.cpp  window.cpp  world.cpp  world_loader.cpp  xml_world_loader.cpp
src/engine/light/: directional_light.cpp  light.cpp  point_light.cpp  spot_light.cpp
src/engine/scene/: camera.cpp  group.cpp  window.cpp  world.cpp
src/engine/scene/light/: directional_light.cpp  light.cpp  point_light.cpp  spot_light.cpp
src/engine/scene/model/: model.cpp  texture.cpp  vertex_buffers.cpp
src/engine/scene/model/color/: color.cpp  color_rgb.cpp
src/engine/scene/transform/: rotate.cpp  scale.cpp  timed_rotate.cpp  timed_translate.cpp  translate.cpp
src/engine/transform/: rotate.cpp  scale.cpp  timed_rotate.cpp  timed_translate.cpp  translate.cpp
src/generator/: CMakeLists.txt  box.cpp  cone.cpp  main.cpp  model.cpp  patch_model.cpp  plane.cpp  sphere.cpp
src/generator/models/: box.cpp  cone.cpp  model.cpp  patch_model.cpp  plane.cpp  sphere.cpp
src/utils/: CMakeLists.txt  box.cpp  cone.cpp  model.cpp  plane.cpp  point3.cpp  sphere.cpp  vector2.cpp  vector3.cpp  vertex.cpp
